--- a/Side and NavyBar/build.html
+++ b/Side and NavyBar/build.html
@@ -10,31 +10,31 @@
     <header>
         <div id="left">
             <div id="menu">
-                <a href="#"><img src="./pngs/menu.png" alt="Menu" width="30px" height="30px" title="Menu"></a>
+                <a href="#"><img src="../pngs/menu.png" alt="Menu" width="30px" height="30px" title="Menu"></a>
             </div>
             <p id="nome"> Classroom Depósito</p>
         </div>
         <div id="right">
             <div id="add">
-                <a href="#"><img src="./pngs/plus.png" alt="adicionar" width="25px" height="25px" id="add"></a>
+                <a href="#"><img src="../pngs/plus.png" alt="adicionar" width="25px" height="25px" id="add"></a>
             </div>
-            <a href="#"><img src="./pngs/user.png" alt="Usuário" id="user"></a>
+            <a href="#"><img src="../pngs/user.png" alt="Usuário" id="user"></a>
         </div>
     </header>
     <aside class="sidebar">
         <div id="top">
             <a href="#" class="sidebar-list">
-                <img src="./pngs/home.png" alt="Início" width="25px" height="25px">
+                <img src="../pngs/home.png" alt="Início" width="25px" height="25px">
                 <text>Início</text>
             </a>
             <a href="#" class="sidebar-list">
-                <img src="./pngs/calendar.png" alt="Agenda" width="25px" height="25px">
+                <img src="../pngs/calendar.png" alt="Agenda" width="25px" height="25px">
                 <text>Agenda</text>
             </a>
         </div>
         <div id="bottom">
             <a href="#" class="sidebar-list">
-                <img src="./pngs/config.png" alt="Configurações" width="25px" height="25px">
+                <img src="../pngs/config.png" alt="Configurações" width="25px" height="25px">
                 <text>Configurações</text>
             </a>
         </div>
