--- a/side-and-navybar/build.html
+++ b/side-and-navybar/build.html
@@ -9,20 +9,20 @@
 <body>
     <header>
         <div id="left">
-            <div id="menu">
+            <div>
                 <a href="#"><img src="../pngs/menu.png" alt="Menu" width="30px" height="30px" title="Menu"></a>
             </div>
             <p id="nome"> Classroom Depósito</p>
         </div>
         <div id="right">
-            <div id="add">
-                <a href="#"><img src="../pngs/plus.png" alt="adicionar" width="25px" height="25px" id="add"></a>
+            <div>
+                <a href="#"><img src="../pngs/plus.png" alt="adicionar" width="25px" height="25px" title="Adicionar"></a>
             </div>
-            <a href="#"><img src="../pngs/user.png" alt="Usuário" id="user"></a>
+            <a href="#"><img src="../pngs/user.png" alt="Usuário"></a>
         </div>
     </header>
     <aside class="sidebar">
-        <div id="top">
+        <div>
             <a href="#" class="sidebar-list">
                 <img src="../pngs/home.png" alt="Início" width="25px" height="25px">
                 <text>Início</text>
@@ -32,7 +32,7 @@
                 <text>Agenda</text>
             </a>
         </div>
-        <div id="bottom">
+        <div class="bottom">
             <a href="#" class="sidebar-list">
                 <img src="../pngs/config.png" alt="Configurações" width="25px" height="25px">
                 <text>Configurações</text>
