--- a/side-and-navybar/build.html
+++ b/side-and-navybar/build.html
@@ -18,7 +18,7 @@
             <div>
                 <a href="#"><img src="../pngs/plus.png" alt="adicionar" width="25px" height="25px" title="Adicionar"></a>
             </div>
-            <a href="#"><img src="../pngs/user.png" alt="Usuário"></a>
+            <a href="#"><img src="../pngs/user.png" alt="Usuário" class="user"></a>
         </div>
     </header>
     <aside class="sidebar">
