--- a/side-and-navybar/build.html
+++ b/side-and-navybar/build.html
@@ -5,39 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classroom</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 </head>
 <body>
-    <header>
-        <div id="left">
-            <div>
-                <a href="#"><img src="../pngs/menu.png" alt="Menu" width="30px" height="30px" title="Menu"></a>
+    <div id="build-element">
+        <header>
+            <div id="left">
+                <div>
+                    <a href="#"><img src="../pngs/menu.png" alt="Menu" width="30px" height="30px" title="Menu"></a>
+                </div>
+                <p id="nome"> Classroom Depósito</p>
             </div>
-            <p id="nome"> Classroom Depósito</p>
-        </div>
-        <div id="right">
-            <div>
-                <a href="#"><img src="../pngs/plus.png" alt="adicionar" width="25px" height="25px" title="Adicionar"></a>
+            <div id="right">
+                <div>
+                    <a href="#"><img src="../pngs/plus.png" alt="adicionar" width="25px" height="25px" title="Adicionar"></a>
+                </div>
+                <a href="#"><img src="../pngs/user.png" alt="Usuário" class="user"></a>
             </div>
-            <a href="#"><img src="../pngs/user.png" alt="Usuário" class="user"></a>
-        </div>
-    </header>
-    <aside class="sidebar">
-        <div>
-            <a href="#" class="sidebar-list">
-                <img src="../pngs/home.png" alt="Início" width="25px" height="25px">
-                <text>Início</text>
-            </a>
-            <a href="#" class="sidebar-list">
-                <img src="../pngs/calendar.png" alt="Agenda" width="25px" height="25px">
-                <text>Agenda</text>
-            </a>
-        </div>
-        <div class="bottom">
-            <a href="#" class="sidebar-list">
-                <img src="../pngs/config.png" alt="Configurações" width="25px" height="25px">
-                <text>Configurações</text>
-            </a>
-        </div>
-    </aside>
+        </header>
+        <aside class="sidebar">
+            <div>
+                <a href="#" class="sidebar-list">
+                    <img src="../pngs/home.png" alt="Início" width="25px" height="25px">
+                    <text>Início</text>
+                </a>
+                <a href="#" class="sidebar-list">
+                    <img src="../pngs/calendar.png" alt="Agenda" width="25px" height="25px">
+                    <text>Agenda</text>
+                </a>
+            </div>
+            <div class="bottom">
+                <a href="#" class="sidebar-list">
+                    <img src="../pngs/config.png" alt="Configurações" width="25px" height="25px">
+                    <text>Configurações</text>
+                </a>
+            </div>
+        </aside>
+    </div>
 </body>
 </html>
