--- a/home/home.html
+++ b/home/home.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script>$( "#build-element" ).load( "build.html");</script>
 </head>
-
 <body id="main">
+    <div id="build-element"></div>
     <div class="subject">
         <a href="#">
             <section class="text">
