--- a/home.html
+++ b/home.html
@@ -5,13 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script>$( "#build-element" ).load( "build.html");</script>
 </head>
 <body id="main">
-    <div id="build-element"></div>
     <div class="subject">
-        <a href="#">
+        <a href="/atividades/atividade.html">
             <section class="text">
                 <h2>Aula 1</h2>
                 <h3>Turma 1</h3>
