--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body id="main">
     <div class="subject">
-        <a href="/atividades/atividade.html">
+        <a href="Projeto-1/atividades/atividade.html">
             <section class="text">
                 <h2>Aula 1</h2>
                 <h3>Turma 1</h3>
