--- a/side-and-navybar/build.html
+++ b/side-and-navybar/build.html
@@ -23,7 +23,7 @@
     </header>
     <aside class="sidebar">
         <div>
-            <a href="/home/home.html" class="sidebar-list">
+            <a href="/Projeto-1/home.html" class="sidebar-list">
                 <img src="../pngs/home.png" alt="Início" width="25px" height="25px">
                 <text>Início</text>
             </a>
